alignment fix

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -82,7 +82,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   height: 70%;
+}
+.flex_fix {
+  display: grid;
+  align-content: center;
 }
 @media only screen and (max-width: 600px) {
   .project_description_text {
